// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component:Issue snapshots only shows the first five items 1`] = `
<section
  className="o-expandable aggregation"
>
  <div
    className="o-expandable_header o-expandable_target"
  >
    <h4
      className="o-expandable_header-left o-expandable_label"
    >
      Issue / sub-issue
    </h4>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <button
        aria-label="Hide Issue / sub-issue filter"
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}
      >
        Hide
        <svg
          className="cf-icon-svg"
          viewBox="0 0 1000 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
          />
        </svg>
      </button>
    </span>
  </div>
  <p>
    The type of issue and sub-issue the consumer identified in the complaint
  </p>
  <section
    className="typeahead "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="m-btn-inside-input input-contains-label"
    >
      <div
        className="input-contains-label_before input-contains-label_before__search"
      >
        <svg
          className="cf-icon-svg"
          viewBox="0 0 880.6 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
          />
        </svg>
      </div>
      <label
        className="u-visually-hidden"
        htmlFor="issue-typeahead"
      >
        Start typing to begin listing issues
      </label>
      <input
        autoComplete="off"
        className="a-text-input"
        disabled={false}
        id="issue-typeahead"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Enter name of issue"
        type="text"
        value=""
      />
    </div>
  </section>
  <div>
    <ul>
      <div
        className="aggregation-branch"
      >
        <li
          className="parent m-form-field m-form-field__checkbox body-copy"
        >
          <input
            aria-label="Incorrect information on credit report"
            checked={false}
            className="flex-fixed a-checkbox"
            id="issueIncorrectinformation on credit report"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="toggle a-label"
            htmlFor="issueIncorrectinformation on credit report"
          >
            <span
              className="u-visually-hidden"
            >
              Incorrect information on credit report
            </span>
          </label>
          <button
            className="flex-all a-btn a-btn__link"
            onClick={[Function]}
          >
            <span>
              Incorrect information on credit report
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 988.2 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M494.1 967.2c-17.3 0-33.8-6.8-46-19L18.6 518.6c-25.1-25.6-24.8-66.8.8-91.9 25.3-24.8 65.8-24.8 91.1 0l383.6 383.6 383.6-383.6c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L540.1 948.1c-12.2 12.2-28.7 19.1-46 19.1z"
              />
            </svg>
          </button>
          <span
            className="flex-fixed parent-count"
          >
            <span>
              20,991
            </span>
          </span>
        </li>
      </div>
      <div
        className="aggregation-branch"
      >
        <li
          className="parent m-form-field m-form-field__checkbox body-copy"
        >
          <input
            aria-label="Cont'd attempts collect debt not owed"
            checked={false}
            className="flex-fixed a-checkbox"
            id="issueCont'dattempts collect debt not owed"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="toggle a-label"
            htmlFor="issueCont'dattempts collect debt not owed"
          >
            <span
              className="u-visually-hidden"
            >
              Cont'd attempts collect debt not owed
            </span>
          </label>
          <button
            className="flex-all a-btn a-btn__link"
            onClick={[Function]}
          >
            <span>
              Cont'd attempts collect debt not owed
            </span>
            <svg
              className="cf-icon-svg"
              viewBox="0 0 988.2 1200"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M494.1 967.2c-17.3 0-33.8-6.8-46-19L18.6 518.6c-25.1-25.6-24.8-66.8.8-91.9 25.3-24.8 65.8-24.8 91.1 0l383.6 383.6 383.6-383.6c25.6-25.1 66.8-24.8 91.9.8 24.8 25.3 24.8 65.8 0 91.1L540.1 948.1c-12.2 12.2-28.7 19.1-46 19.1z"
              />
            </svg>
          </button>
          <span
            className="flex-fixed parent-count"
          >
            <span>
              17,244
            </span>
          </span>
        </li>
      </div>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Loan servicing, payments, escrow account"
          checked={false}
          className="flex-fixed a-checkbox"
          id="issueLoanservicing, payments, escrow account"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="issueLoanservicing, payments, escrow account"
        >
          Loan servicing, payments, escrow account
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          <span>
            14,605
          </span>
        </span>
      </li>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Loan modification,collection,foreclosure"
          checked={false}
          className="flex-fixed a-checkbox"
          id="issueLoanmodification,collection,foreclosure"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="issueLoanmodification,collection,foreclosure"
        >
          Loan modification,collection,foreclosure
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          <span>
            10,716
          </span>
        </span>
      </li>
      <li
        className="layout-row m-form-field m-form-field__checkbox"
      >
        <input
          aria-label="Dealing with my lender or servicer"
          checked={false}
          className="flex-fixed a-checkbox"
          id="issueDealingwith my lender or servicer"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          className="a-label flex-all bucket-key body-copy"
          htmlFor="issueDealingwith my lender or servicer"
        >
          Dealing with my lender or servicer
        </label>
        <span
          className="flex-fixed bucket-count"
        >
          <span>
            7,783
          </span>
        </span>
      </li>
    </ul>
    <div>
      <button
        className="a-btn a-btn__link more"
        onClick={[Function]}
      >
        + Show 1 more
      </button>
    </div>
  </div>
</section>
`;

exports[`component:Issue snapshots renders without crashing 1`] = `
<section
  className="o-expandable aggregation"
>
  <div
    className="o-expandable_header o-expandable_target"
  >
    <h4
      className="o-expandable_header-left o-expandable_label"
    >
      Issue / sub-issue
    </h4>
    <span
      className="o-expandable_header-right o-expandable_link"
    >
      <button
        aria-label="Hide Issue / sub-issue filter"
        className="a-btn a-btn__link o-expandable_cue o-expandable_cue-close"
        onClick={[Function]}
      >
        Hide
        <svg
          className="cf-icon-svg"
          viewBox="0 0 1000 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M500 105.2c-276.1 0-500 223.9-500 500s223.9 500 500 500 500-223.9 500-500-223.9-500-500-500zm263.1 550.7H236c-27.6 0-50-22.4-50-50s22.4-50 50-50h527.1c27.6 0 50 22.4 50 50s-22.4 50-50 50z"
          />
        </svg>
      </button>
    </span>
  </div>
  <p>
    The type of issue and sub-issue the consumer identified in the complaint
  </p>
  <section
    className="typeahead "
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="m-btn-inside-input input-contains-label"
    >
      <div
        className="input-contains-label_before input-contains-label_before__search"
      >
        <svg
          className="cf-icon-svg"
          viewBox="0 0 880.6 1200"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M860.1 879.2L645.7 664.8c90.8-136.8 76-323-44.6-443.5-137.5-137.5-360.5-137.5-498 0s-137.5 360.5 0 498c118.5 118.4 303.9 137 443.5 44.6L761 978.3c27.3 27.3 71.7 27.3 99 0s27.4-71.8.1-99.1zm-508-116.9C191.4 762 61.3 631.5 61.6 470.8c.3-160.7 130.8-290.8 291.5-290.5s290.8 130.8 290.5 291.5c-.2 118.2-71.9 224.6-181.5 269.1-34.9 14.2-72.3 21.5-110 21.4z"
          />
        </svg>
      </div>
      <label
        className="u-visually-hidden"
        htmlFor="issue-typeahead"
      >
        Start typing to begin listing issues
      </label>
      <input
        autoComplete="off"
        className="a-text-input"
        disabled={false}
        id="issue-typeahead"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Enter name of issue"
        type="text"
        value=""
      />
    </div>
  </section>
  <div>
    <ul />
  </div>
</section>
`;
